--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       <div
         data-global-resource-path="@marketplace/Drive_Web_Studio/Interactive/templates/partials/header.html"
       >
-      <!-- some changes -->
+      <!-- some changes * 2-->
         <header class="header">
                 <div class="container-fluid">
             <div class="row-fluid-wrapper">
