--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
       #partners {
         font-family: "montserrat", sans-serif;
       }
+      /* onemore time */
       @font-face {
         font-weight: 400;
         font-style: normal;
